--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 	<section>
 		<input type="text" autocomplete="off" name="city" class="enter-city">
+		<input type="text" autocomplete="off" name="city" class="enter-citys">
 	</section>
 </body>
 <script src="js/main.js"></script>
