--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 	<section>
-		<input type="text" autocomplete="off" name="city" class="enter-city">
-		<input type="text" autocomplete="off" name="city" class="enter-citys">
+		<input type="text" name="city" class="enter-city">
+		<input type="text" name="city" class="enter-citys">
 	</section>
 </body>
 <script src="js/main.js"></script>
